// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`логи васов: залогирует показ для всех услуг на сниппете "обычная продажа" 1`] = `
Array [
  Array [
    Object {
      "event": "VAS_SHOW",
      "originalPrice": 197,
      "price": 60,
      "serviceId": "all_sale_color",
    },
  ],
  Array [
    Object {
      "event": "VAS_SHOW",
      "originalPrice": 997,
      "price": 300,
      "serviceId": "all_sale_toplist",
    },
  ],
  Array [
    Object {
      "event": "VAS_SHOW",
      "originalPrice": 497,
      "price": 150,
      "serviceId": "all_sale_special",
    },
  ],
  Array [
    Object {
      "event": "VAS_SHOW",
      "originalPrice": 1499,
      "price": 967,
      "serviceId": "show-in-stories",
    },
  ],
  Array [
    Object {
      "event": "VAS_SHOW",
      "originalPrice": undefined,
      "price": 2199,
      "serviceId": "all_sale_activate",
    },
  ],
  Array [
    Object {
      "event": "VAS_SHOW",
      "originalPrice": undefined,
      "price": 99,
      "serviceId": "all_sale_badge",
    },
  ],
]
`;

exports[`логи васов: залогирует показ, когда блок будет в области видимости 1`] = `
Array [
  Array [
    Object {
      "event": "VAS_SHOW",
      "originalPrice": 1247,
      "price": 375,
      "serviceId": "package_turbo",
    },
  ],
  Array [
    Object {
      "event": "VAS_SHOW",
      "originalPrice": undefined,
      "price": 2199,
      "serviceId": "all_sale_activate",
    },
  ],
]
`;

exports[`правильно сортирует сервисы на сниппете 1`] = `
Array [
  "all_sale_fresh",
  "all_sale_color",
  "all_sale_special",
  "all_sale_toplist",
  "all_sale_activate",
  "all_sale_badge",
]
`;

exports[`правильно формирует список сервисов для оплаты при бесплатном размещении без услуг 1`] = `
Array [
  Object {
    "selectedItems": Array [],
  },
  Object {
    "hasActionWall": false,
    "needConnectMosRu": false,
  },
]
`;

exports[`правильно формирует список сервисов для оплаты при бесплатном размещении без услуг но с экшен-волом мос.ру 1`] = `
Array [
  Object {
    "selectedItems": Array [],
  },
  Object {
    "hasActionWall": true,
    "needConnectMosRu": true,
  },
]
`;

exports[`правильно формирует список сервисов для оплаты при бесплатном размещении с васом и с экшен-волом мос.ру 1`] = `
Array [
  Object {
    "selectedItems": Array [
      Object {
        "count": 1,
        "name": "all_sale_toplist",
      },
    ],
  },
  Object {
    "hasActionWall": true,
    "needConnectMosRu": false,
  },
]
`;

exports[`правильно формирует список сервисов для оплаты при бесплатном размещении с пакетом 1`] = `
Array [
  Object {
    "selectedItems": Array [
      Object {
        "count": 1,
        "name": "package_turbo",
      },
    ],
  },
  Object {
    "hasActionWall": false,
    "needConnectMosRu": false,
  },
]
`;

exports[`правильно формирует список сервисов для оплаты при бесплатном размещении с пактом и с экшен-волом мос.ру 1`] = `
Array [
  Object {
    "selectedItems": Array [
      Object {
        "count": 1,
        "name": "package_turbo",
      },
    ],
  },
  Object {
    "hasActionWall": true,
    "needConnectMosRu": false,
  },
]
`;

exports[`правильно формирует список сервисов для оплаты при платном размещении с васами 1`] = `
Array [
  Object {
    "selectedItems": Array [
      Object {
        "count": 1,
        "name": "all_sale_toplist",
      },
      Object {
        "count": 1,
        "name": "all_sale_activate",
      },
      Object {
        "count": 2,
        "name": "all_sale_badge",
      },
    ],
  },
  Object {
    "hasActionWall": false,
    "needConnectMosRu": false,
  },
]
`;

exports[`правильно формирует список сервисов для оплаты при редактировании с васами 1`] = `
Array [
  Object {
    "selectedItems": Array [
      Object {
        "count": 1,
        "name": "all_sale_toplist",
      },
      Object {
        "count": 1,
        "name": "all_sale_badge",
      },
    ],
  },
  Object {
    "hasActionWall": false,
    "needConnectMosRu": false,
  },
]
`;
